# prompt-optimization-framework-comparison

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: model_config.yaml
configs/datasets/: gsm8k.yaml  sst5.yaml
results_eval/gsm8k/gemma-3-27b-it/run_CAPO/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/gsm8k/gemma-3-27b-it/run_DSPY/: metrics.txt  predictions.csv  prompt_template.txt  system_prompt.txt
results_eval/gsm8k/gemma-3-27b-it/run_OPRO/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/gsm8k/gemma-3-27b-it/run_adalflow/: metrics.txt  predictions.csv  system_prompt.txt
results_eval/gsm8k/gemma-3-27b-it/run_unoptimized/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/gsm8k/gemma-3-27b-it/run_unoptimized2/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/gsm8k/gemma-3-27b-it/run_unoptimized3/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/sst5/gemma-3-27b-it/run_CAPO/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/sst5/gemma-3-27b-it/run_DSPY/: metrics.txt  predictions.csv  prompt_template.txt  system_prompt.txt
results_eval/sst5/gemma-3-27b-it/run_adalflow/: metrics.txt  predictions.csv  system_prompt.txt
results_eval/sst5/gemma-3-27b-it/run_opro/: metrics.txt  predictions.csv  prompt_template.txt
results_eval/sst5/gemma-3-27b-it/run_unoptimized/: metrics.txt  predictions.csv  (+1 more)
src/: run_adalflow.py  run_capo.py  run_dspy.py  run_evaluation.py  run_evoprompt.py  run_experiment.py  run_opro.py  utils.py
(+6 files in other folders)
